update sample docker

--- a/src/authentication/Dockerfile
+++ b/src/authentication/Dockerfile
@@ -9,5 +9,5 @@ ENV GO111MODULE=off
 
 RUN go get github.com/githubnemo/CompileDaemon
 #RUN go get -t -d github.com/tebeka/selenium
-#ENTRYPOINT CompileDaemon -build="go build" -command="./"
-ENTRYPOINT go run main.go
+ENTRYPOINT CompileDaemon -build="go build" -command="./igbot-auth"
+#ENTRYPOINT go run main.go
