--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
             docker-kafka-server:
               properties:
                 bootstrap.servers: "kafka:9092"
+
   ig_bot_db:
     image: postgres
     restart: always
@@ -52,9 +53,18 @@ services:
       - .env
     ports:
       - "5432:5432"
-#    volumes:
-#      - data:/var/lib/postgresql/data
 
+  # auth service
+  ig_bot_db_auth:
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=auth_service
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_DB=auth_service
+    ports:
+      - "5433:5432"
+  
   auth-service:
     container_name: authentication-service
     build: src/authentication
@@ -64,8 +74,19 @@ services:
       - "3000:80"
     links:
       - kafka
+    depends_on:
+      - ig_bot_db_auth
     environment:
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      DB_DRIVER: postgres
+      DB_USER: auth_service
+      DB_PASSWORD: secret
+      DB_HOST: ig_bot_db_auth
+      DB_PORT: 5432
+      DB_NAME: auth_service
+      SERVER_POST: 80
+  
+  # automate service
   automate-service:
     container_name: automate-service
     build: src/automate
